--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -272,7 +272,7 @@
                             placeholder="John Doe"
                             aria-describedby="firstNameHelp"
                           />
-                          <label for="edit_candidate_fname">First Name</label>
+                          <label for="edit_candidate_fname">First Name - Mid Name (As in Passport)</label>
                         </div>
                       </div>
 
@@ -440,12 +440,12 @@
                             class="form-select"
                           >
                             <option value="" disabled selected>
-                              -- Select Experience --
+                              -- Select Rank Experience --
                             </option>
                             <!-- Options will be dynamically added using JavaScript -->
                           </select>
                           <label for="edit_candidate_experience"
-                            >Experience</label
+                            >Rank Experience</label
                           >
                         </div>
                       </div>
