--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -340,9 +340,7 @@
                                 <div class="col-md-10 mb-1">
                               <div class="row">
                                 <div class="col-md-3 mb-1">
-                                  <label for="edit_candidate_fname"
-                                    >First Name</label
-                                  >
+                                  <label for="edit_candidate_fname">First Name - Mid Name (As in Passport)</label>
                                   <input type="hidden" id="candidateId" />
                                   <input
                                     type="text"
@@ -474,7 +472,7 @@
                                 </div>
                                 <div class="col-md-2 mb-1">
                                   <label for="edit_candidate_experience"
-                                    >Experience</label
+                                    >Rank Experience</label
                                   >
                                   <input
                                     type="text"
@@ -900,7 +898,7 @@
                                 class="btn btn-danger float-end mt-3"
                                 type="submit"
                               >
-                                Update Candidate
+                                Edit / Update
                               </button>
                             </div>
                           </div>
