--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -1225,6 +1225,7 @@ function getUserName(email){
 
             if (result.success) {
                 sessionStorage.setItem('token', result.token);
+                localStorage.setItem("token", result.token);
                 alert('Login successful');
                 document.getElementById('loginModal').style.display = 'none';
                 window.location.reload();
