--- a/views/public/html/Evaluation-EngineRatings.html
+++ b/views/public/html/Evaluation-EngineRatings.html
@@ -1258,6 +1258,7 @@ SIRE/CDI experience Right ship
     
                 if (result.success) {
                     sessionStorage.setItem('token', result.token);
+                    localStorage.setItem("token", result.token);
                     alert('Login successful');
                     document.getElementById('loginModal').style.display = 'none';
                     window.location.reload();
