--- a/views/public/html/Evaluation-OfficersEngine.html
+++ b/views/public/html/Evaluation-OfficersEngine.html
@@ -1285,6 +1285,7 @@
 
             if (result.success) {
               sessionStorage.setItem('token', result.token);
+              localStorage.setItem("token", result.token);
               alert('Login successful');
               document.getElementById('loginModal').style.display = 'none';
               window.location.reload();
