--- a/views/public/html/Evaluation-GalleyOfficer.html
+++ b/views/public/html/Evaluation-GalleyOfficer.html
@@ -1105,6 +1105,7 @@ SIRE/CDI experience Right ship
 
             if (result.success) {
                 sessionStorage.setItem('token', result.token);
+                localStorage.setItem("token", result.token);
                 alert('Login successful');
                 document.getElementById('loginModal').style.display = 'none';
                 window.location.reload();
