--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -72,6 +72,7 @@
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
 
     <!-- Page CSS -->
 
@@ -690,25 +691,35 @@
                               <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
+                                      <input name="signon_dg" type="date" id="editcontract_signon_dg" class="form-control"/>
+                                      <label for="editcontract_signon_dg">Sign on(DG)</label>
+                                  </div>
+                                </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
                                           <input name="wage" type="date" id="editcontract_wage_start" class="form-control"/>
                                           <label for="editcontract_wage_start">Wages start</label>
                                       </div>
                                   </div>
+                                  
+                              </div>
+          
+                              <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                           <input name="eoc" type="date" id="editcontract_eoc" class="form-control"/>
                                           <label for="editcontract_eoc">EOC</label>
                                       </div>
                                   </div>
-                              </div>
-          
-                              <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                           <input name="wages" type="text" id="editcontract_wages" class="form-control"/>
                                           <label for="editcontract_wages">Wages</label>
                                       </div>
                                   </div>
+                              </div>
+          
+                              <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                           <select name="currency" id="editcontract_currency" class="form-select">
@@ -725,9 +736,6 @@
 
                                       </div>
                                   </div>
-                              </div>
-          
-                              <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                           <select name="wagestype" id="editcontract_wagestype" class="form-select">
@@ -740,6 +748,9 @@
 
                                       </div>
                                   </div>
+                                  
+                              </div>
+                              <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                           <input name="signoff" type="date" id="editcontract_signoff" class="form-control"/>
@@ -747,6 +758,13 @@
 
                                       </div>
                                   </div>
+                                <div class="col-md-6">
+                                  <div class="form-floating">
+                                      <input name="signoff_dg" type="date" id="editcontract_signoff_dg" class="form-control"/>
+                                      <label for="editcontract_signoff_dg">Sign off(DG)</label>
+
+                                  </div>
+                              </div>
                               </div>
           
                               <div class="row mb-3">
@@ -1049,5 +1067,6 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
   </body>
 </html>
