--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1121,6 +1121,9 @@
                                     <th scope="col">
                                       &nbsp;&nbsp;&nbsp;Sign&nbsp;On&nbsp;&nbsp;&nbsp;
                                     </th>
+                                    <th scope="col">
+                                      &nbsp;&nbsp;&nbsp;Sign&nbsp;On(DG)&nbsp;&nbsp;&nbsp;
+                                    </th>
                                     <th scope="col">Wages&nbsp;Start</th>
                                     <th scope="col">
                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EOC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -1130,6 +1133,9 @@
                                     <th scope="col">Wages&nbsp;Type</th>
                                     <th scope="col">
                                       &nbsp;&nbsp;&nbsp;Sign&nbsp;Off&nbsp;&nbsp;&nbsp;
+                                    </th>
+                                    <th scope="col">
+                                      &nbsp;&nbsp;&nbsp;Sign&nbsp;Off(DG)&nbsp;&nbsp;&nbsp;
                                     </th>
                                     <th scope="col">Sign&nbsp;Off&nbsp;Port</th>
                                     <th scope="col">Signoff&nbsp;Reason</th>
