--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -1040,11 +1040,29 @@
                                         <label for="contract_bond_store">Bond Store</label>
                                     </div>
                                 </div>
+                                
+                              </div>
+                              <div class="row mb-3">
                                 <div class="col-md-6">
                                   <div class="form-floating">
                                       <input name="cdc_passport" type="text" id="cdc_passport" class="form-control"/>
                                       <label for="cdc_passport">CDC / Passport No</label>
                                   </div>
+                              </div>
+                              <div class="col-md-6">
+                                <div class="form-floating">
+                                  <select
+                                    id="contractExtension"
+                                    class="form-select"
+                                  >
+                                    <option value="" disabled selected>
+                                      -- Select Contract Extension--
+                                    </option>
+                                    <option value="Yes">Yes</option>
+                                    <option value="No">No</option>
+                                  </select>
+                                  <label for="candidate_c_rank">Contract Extension</label>
+                                </div>
                               </div>
                               </div>
 
