--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1171,6 +1171,9 @@
                                       CDC&nbsp;/&nbsp;Passport&nbsp;No
                                     </th>
                                     <th scope="col">
+                                      Contract Extension
+                                    </th>
+                                    <th scope="col">
                                       Duration&nbsp;of&nbsp;Contract
                                     </th>
                                     <th scope="col">Period&nbsp;Onboard</th>
