add new dashboard data

--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -98,6 +98,7 @@
       rel="stylesheet"
       href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
+    <link rel="stylesheet" href="../assets/sweetalert/sweetalert2.min.css" />
 
     <!-- Page CSS -->
 
@@ -167,7 +168,7 @@
                             aria-describedby="firstNameHelp"
                             required
                           />
-                          <label for="candidate_fname">First Name</label>
+                          <label for="candidate_fname">First Name - Mid Name (As in Passport)</label>
                         </div>
                       </div>
 
@@ -201,7 +202,7 @@
                             </option>
                             <!-- Options will be dynamically added using JavaScript -->
                           </select>
-                          <label for="candidate_c_rank">Rank</label>
+                          <label for="candidate_c_rank">Rank Experience</label>
                         </div>
                       </div>
                       <div class="col-md-6">
@@ -1051,5 +1052,6 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="../assets/sweetalert/sweetalert2.min.js"></script>
   </body>
 </html>
