--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -570,6 +570,12 @@
                     </div>
                   </div>
                 </div>
+                
+              </div>
+              <div class="container-fluid">
+              <div style="border-bottom: 2px solid #d9dee3 !important;">&nbsp;</div>
+            </div>
+              <div class="row m-1 mt-0 stats-count">
                 <div
                   class="col-sm-6 col-xl-3 handsymb"
                   onclick="gotoStats('OnBoard')"
@@ -622,6 +628,88 @@
                         <div class="content-left">
                           <h3 class="mb-0"><span id="dueforrenewal"></span></h3>
                           <small>Due for Renewal</small>
+                        </div>
+                        <span class="badge bg-label-info rounded-circle p-2">
+                          <i class="bx bx-infinite bx-sm"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row m-1 mt-0 stats-count">
+                <div
+                  class="col-sm-6 col-xl-3 handsymb"
+                  onclick="gotoStats('SignOnDG')"
+                >
+                  <div class="card mt-3 col m-3 rounded-3">
+                    <div class="card-body">
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="content-left">
+                          <h3 class="mb-0"><span id="SignOnDG"></span></h3>
+                          <small>Sign On DG</small>
+                        </div>
+                        <span class="badge bg-label-info rounded-circle p-2">
+                          <i class="bx bx-infinite bx-sm"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-sm-6 col-xl-3 handsymb"
+                  onclick="gotoStats('SignOffDG')"
+                >
+                  <div class="card mt-3 col m-3 rounded-3">
+                    <div class="card-body">
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="content-left">
+                          <h3 class="mb-0"><span id="SignOffDG"></span></h3>
+                          <small>Sign Off DG</small>
+                        </div>
+                        <span class="badge bg-label-danger rounded-circle p-2">
+                          <i class="bx bx-user bx-sm"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-sm-6 col-xl-3 handsymb"
+                  onclick="gotoStats('ContractExtension')"
+                >
+                  <div class="card mt-3 col m-3 rounded-3">
+                    <div class="card-body">
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="content-left">
+                          <h3 class="mb-0"><span id="ContractExtension"></span></h3>
+                          <small>Contract Extension</small>
+                        </div>
+                        <span class="badge bg-label-info rounded-circle p-2">
+                          <i class="bx bx-infinite bx-sm"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="col-sm-6 col-xl-3 handsymb"
+                  onclick="gotoStats('EOCExceeded')"
+                >
+                  <div class="card mt-3 col m-3 rounded-3">
+                    <div class="card-body">
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="content-left">
+                          <h3 class="mb-0"><span id="EOCExceeded"></span></h3>
+                          <small>EOC Exceeded</small>
                         </div>
                         <span class="badge bg-label-info rounded-circle p-2">
                           <i class="bx bx-infinite bx-sm"></i>
