update new changes.

--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -1065,7 +1065,14 @@
                                 </div>
                               </div>
                               </div>
-
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input name="contractExtensionDays" type="text" id="contractExtensionDays" class="form-control"/>
+                                        <label for="contractExtensionDays">Contract Extension Days</label>
+                                    </div>
+                                </div>
+                              </div>
                                 
             
                                 <div class="card-footer text-end pt-0 pe-0 pb-1">
