--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -1021,6 +1021,14 @@
                               </div>
                             </div>
                             </div>
+                            <div class="row mb-3">
+                              <div class="col-md-6">
+                                  <div class="form-floating">
+                                      <input name="contractExtensionDays" type="text" id="contractExtensionDays" class="form-control"/>
+                                      <label for="contractExtensionDays">Contract Extension Days</label>
+                                  </div>
+                              </div>
+                            </div>
           
                               <div class="card-footer text-end mt-0 pt-0 mb-0 pb-0   pe-0">
                                       <button type="submit" class="btn btn-primary">EDIT CONTRACT</button>
