--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1128,6 +1128,12 @@
                                     <th scope="col">
                                       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EOC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </th>
+                                    <th scope="col">
+                                      Contract Extension
+                                    </th>
+                                    <th scope="col">
+                                      Contract Extension Days
+                                    </th>
                                     <th scope="col">Wages</th>
                                     <th scope="col">Currency</th>
                                     <th scope="col">Wages&nbsp;Type</th>
@@ -1169,9 +1175,6 @@
                                     <th scope="col">bondStore</th>
                                     <th scope="col">
                                       CDC&nbsp;/&nbsp;Passport&nbsp;No
-                                    </th>
-                                    <th scope="col">
-                                      Contract Extension
                                     </th>
                                     <th scope="col">
                                       Duration&nbsp;of&nbsp;Contract
