--- a/views/public/html/daily-stats.html
+++ b/views/public/html/daily-stats.html
@@ -158,8 +158,18 @@
                 <div class="w-100 mt-3">
                   <div class="">
                     <div class="row justify-content-end">
-                      <div class="col-md-8">
+                      <div class="col-md-7">
                         <h5 class="card-header" id="stat-title"></h5>
+                      </div>
+                      <div class="col-md-1">
+                        <select
+                          id="rowsPerPageSelect"
+                          class="form-select"
+                        >
+                          <option value="10">10</option>
+                          <option value="25">25</option>
+                          <option value="50">50</option>
+                        </select>
                       </div>
                       <div class="col-md-3">
                         <div>
