--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -761,7 +761,7 @@
                                 <div class="row mb-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input name="eoc" type="date" id="contract_eoc" class="form-control"/>
+                                            <input name="eoc" type="date" id="contract_eoc" class="form-control" required/>
                                             <label for="contract_eoc">EOC</label>
                                         </div>
                                     </div>
