implement sign on pending count

--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -747,6 +747,26 @@
                     </div>
                   </div>
                 </div>
+                <div
+                  class="col-sm-6 col-xl-3 handsymb"
+                  onclick="gotoStats('SignOnPending')"
+                >
+                  <div class="card mt-3 col m-3 rounded-3">
+                    <div class="card-body">
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <div class="content-left">
+                          <h3 class="mb-0"><span id="SignOnPending"></span></h3>
+                          <small>SignOn Pending</small>
+                        </div>
+                        <span class="badge bg-label-info rounded-circle p-2">
+                          <i class="bx bx-infinite bx-sm"></i>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="container-fluid">
